--- a/IHS/Desenvolvimento Web - DW/AULAS/semana07/ex007/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana07/ex007/index.html
@@ -7,10 +7,18 @@
 </head>
 <body>
     <div class="text">
-        <h1 class="tittle">Entenda Portugol</h1>
-        <div class="intro">
-            
-        </div>
+        <h1>Entendendo Portugol</h1>
+        <h2>Introdução</h2>
+        <h3>Justificação da Temática</h3>
+        <h3>Caráter Excepcional do caso de estudo</h3>
+        <h3>Perguntas de parteida e objeticos de investigação</h3>
+        <h3>Metodologia de investigação</h3>
+        <h4>Etapas de investigação</h4>
+        <h4>Instrumentos de análise e fontes de informação</h4>
+        <h2>O ordenamento do território em Portugol: instrumento e atores</h2>
+        <h3>Os instrumentos de gestão do território</h3>
+        <h4>Os instrumentos de planejamento territorial</h4>
+        <h4>Os regimes territoriais especiais </h4> 
     </div>
 </body>
 </html>
