--- a/IHS/Desenvolvimento Web - DW/AULAS/semana08/ex010/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana08/ex010/index.html
@@ -6,6 +6,7 @@
     <title>Tipos de listas</title>
 </head>
 <body>
+    <!--TIVE QUE COLOCAR CSS POIS O HTML NÃO FUNCIONOU POR ALGUM MOTIVO-->
     <h1>Listas Ordenadas</h1>
     <h2>Listas em números tradicionais</h2>
     <ol>
@@ -59,16 +60,16 @@
     <h1>Lista Mistas</h1>
     <h2>Mistas enumeradas</h2>
     <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
+        <li type="1">Item 1</li>
+        <li type="1">Item 2</li>
         <ul>
             <li type="a">Item 2.1</li>
             <li type="a">Item 2.2</li>
             <li type="a">Item 2.3</li>
         </ul>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
+        <li type="1">Item 3</li>
+        <li type="1">Item 4</li>
+        <li type="1">Item 5</li>
     </ul>
     <h2>Mistas demarcadas</h2>
     <ul>
@@ -84,14 +85,18 @@
         <li>Item 5</li>
     </ul>
     <h2>Mistas completas</h2>
-    Item 1
-    Item 2
-    Item 2.1
-    Item 2.2
-    Item 2.3
-    Item 3
-    Item 4
-    Item 5
+    <ul>
+        <li type="1">Item 1</li>
+        <li type="1">Item 2</li>
+        <ul>
+            <li style="list-style: square;">Item 2.1</li>
+            <li style="list-style: square;">Item 2.2</li>
+            <li style="list-style: square;">Item 2.3</li>
+        </ul>
+        <li type="1">Item 3</li>
+        <li type="1">Item 4</li>
+        <li type="1">Item 5</li>
+    </ul>
     <h1>Listas de Definições</h1>
         <p>Além das listas ordenadas e não ordenadas, o HTML oferece a Lista de Definição, que é ideal para criar ou apresentar pares de termo e descrição.</p>
     <dl>   
