--- a/IHS/Desenvolvimento Web - DW/AULAS/semana08/entrega/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana08/entrega/index.html
@@ -6,8 +6,9 @@
     <title>Manual do Game</title>
 </head>
 <body>
-    <h1>Meu Jogo Incrivel - Guia Rápido</h1>
-    <h2>Spirit Tournment</h2>
+    <h1 style="text-align: center;">Meu Jogo Incrivel - Guia Rápido</h1>
+    <h2 style="text-align: center;">Spirit Tournment</h2>
+    <img src="https://cdn.retrojunk.com/article-images/I4GhUsgaIz2uzOpASpUAu.jpg" alt="Imagem MERAMENTE ilustrativa do Spirit Tournment" style="display: block; margin: auto;" width="400px">
     <p>Bem-vindo ao guia rápido para diminar os segredos do Spirit Fighters" Prepare-se para fortes emoções em lutas dinâmicas! &copy; 2025.</p>
     <h3>Comandos Essenciais para Movimentação</h3>
     <hr>
@@ -21,15 +22,24 @@
         <li>Soco Forte: Tecla <button>K</button> / Console: <button>B</button></li>
         <li>Soul Blast: Tecla <button>J</button> / Console: <button>A</button></li>
         <li>Atalho 1 (SF/SM): Tecla <button>O</button> / Console: <button>RB</button></li>
-        Atalho 2 (SF/SB): Tecla <button>L</button> / Console: <button>RT</button><li></li>
+        <li>Atalho 2 (SF/SB): Tecla <button>L</button> / Console: <button>RT</button></li>
     </ul>
-    Sequência de Ataques e Quick Combos
-    Aperte rapidamente: <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>
-    Aperte rapidamente (Gasta 1 RageBar): <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>
-    Aperte rapidamente (Gasta 3 RageBar's): <button>B</button>, <button>B</button>, <button>B</button>, <button>B</button>
-    Tipos de Supers (Funcina com todos os Char's)
-    Rage (Gasta 1 RageBar): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>X</button>
-    Super Rage (Gasta 2 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>Y</button>
-    Berserk Rage (Gasta 3 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>B</button>
+    <h3>Sequência de Ataques e Quick Combos</h3>
+    <hr>
+    <ol>
+        <li type="I">Aperte rapidamente (Não gasta RageBar): <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button></li>
+        <li type="I">Aperte rapidamente (Gasta 1 RageBar): <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button></li>
+        <li type="I">Aperte rapidamente (Gasta 3 RageBar's): <button>B</button>, <button>B</button>, <button>B</button>, <button>B</button></li>
+    </ol>
+    <h3>Tipos de Supers (Funcina com todos os Char's)</h3>
+    <hr>
+    <dl>
+        <dt>Especial nvl 1 &#x1F47F;</dt>
+        <dd>Rage (Gasta 1 RageBar): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>X</button></dd>
+        <dt>Especial nvl 2 &#x1F480;</dt>
+        <dd>Super Rage (Gasta 2 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>Y</button></dd>
+        <dt>Especial nvl 3 &#x2620;</dt>
+        <dd>Berserk Rage (Gasta 3 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>B</button></dd>
+    </dl>
 </body>
 </html>
