--- a/IHS/Desenvolvimento Web - DW/AULAS/semana08/entrega/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana08/entrega/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manual do Game</title>
 </head>
 <body>
-    <h1>Meu Jogo Incrivel - Guia Rápido</h1>
-    <h2>Spirit Tournment</h2>
-    <p>Bem-vindo ao guia rápido para diminar os segredos do Spirit Fighters" Prepare-se para fortes emoções em lutas dinâmicas! &copy; 2025.</p>
+    <h1 style="text-align: center">Meu Jogo Incrível - Guia Rápido</h1>
+    <h2 style="text-align: center">Spirit Tournament</h2>
+    <img src="img/image.jpg" alt="Spirit Tournament Logo" style="display: block; margin: auto" width="20%">
+    <p>Bem-vindo ao guia rápido para dominar os segredos do <em>Spirit Fighters</em>! Prepare-se para fortes emoções em lutas dinâmicas! &copy; 2025.</p>
     <h3>Comandos Essenciais para Movimentação</h3>
     <hr>
     <ul>
-        <li>Mover para cima: Tecla <button>w</button> / Console: <button>&uparrow;</button></li>
-        <li>Mover para Baixo: Tecla <button>S</button> / Console: <button>&downarrow;</button></li>
-        <li>Mover para Esquerda: Tecla <button>A</button> / Console: <button>&leftarrow;</button></li>
-        <li>Mover para Direita: Tecla <button>D</button> / Console: <button>&rightarrow;</button></li>
+        <li>Mover para cima: Tecla <button>W</button> / Console: <button>&uparrow;</button></li>
+        <li>Mover para baixo: Tecla <button>S</button> / Console: <button>&downarrow;</button></li>
+        <li>Mover para esquerda: Tecla <button>A</button> / Console: <button>&leftarrow;</button></li>
+        <li>Mover para direita: Tecla <button>D</button> / Console: <button>&rightarrow;</button></li>
         <li>Soco fraco: Tecla <button>U</button> / Console: <button>X</button></li>
         <li>Soco médio: Tecla <button>I</button> / Console: <button>Y</button></li>
-        <li>Soco Forte: Tecla <button>K</button> / Console: <button>B</button></li>
+        <li>Soco forte: Tecla <button>K</button> / Console: <button>B</button></li>
         <li>Soul Blast: Tecla <button>J</button> / Console: <button>A</button></li>
         <li>Atalho 1 (SF/SM): Tecla <button>O</button> / Console: <button>RB</button></li>
-        Atalho 2 (SF/SB): Tecla <button>L</button> / Console: <button>RT</button><li></li>
+        <li>Atalho 2 (SF/SB): Tecla <button>L</button> / Console: <button>RT</button></li>
     </ul>
-    Sequência de Ataques e Quick Combos
-    Aperte rapidamente: <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>
-    Aperte rapidamente (Gasta 1 RageBar): <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>
-    Aperte rapidamente (Gasta 3 RageBar's): <button>B</button>, <button>B</button>, <button>B</button>, <button>B</button>
-    Tipos de Supers (Funcina com todos os Char's)
-    Rage (Gasta 1 RageBar): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>X</button>
-    Super Rage (Gasta 2 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>Y</button>
-    Berserk Rage (Gasta 3 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>B</button>
+    <h3>Sequência de Ataques e Quick Combos</h3>
+    <hr>
+    <ol type="I">
+        <li>Aperte rapidamente: <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button></li>
+        <li>Aperte rapidamente (Gasta 1 RageBar): <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button></li>
+        <li>Aperte rapidamente (Gasta 3 RageBars): <button>B</button>, <button>B</button>, <button>B</button>, <button>B</button></li>
+    </ol>
+    <h3>Tipos de Supers (Funciona com todos os personagens)</h3>
+    <hr>
+    <dl>
+        <dt>&#x1F525; Rage (Gasta 1 RageBar):</dt>
+        <dd><button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>X</button></dd>
+        <dt>&#x26A1; Super Rage (Gasta 2 RageBars):</dt>
+        <dd><button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>Y</button></dd>
+        <dt>&#x1F4A5; Berserk Rage (Gasta 3 RageBars):</dt>
+        <dd><button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>B</button></dd>
+    </dl>
 </body>
 </html>
