--- a/IHS/Desenvolvimento Web - DW/AULAS/semana10/ex011/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana10/ex011/index.html
@@ -22,12 +22,12 @@
     <p>Até agora os links acima fizeram o usuário ir pra outro site e abandonar o seu. O ideal é que ele abra outros sites em uma nova aba. Acesse agora o <a href="https://www.youtube.com/" target="_blank" rel="external">YouTube</a> em uma nova aba em branco.</p>
 
     <p>Os links também podem ser usados para fazer o download de arquivos, ou abri-los no próprio navegador. Por exemplo:</p>
-    <ul>
-        <li>- Abra aqui um livro PDF de exemplo</li>
-        <li>- Baixe aqui a versão compactada do livro</li>
+    <ul type="square">
+        <li>- Abra <a href="livro/meulivro.pdf" target="_blank" rel="next">aqui</a> um livro PDF de exemplo</li>
+        <li>- Baixe <a href="livro/meulivro.zip" download="meulivro.zip" type="application/zip">aqui</a> a versão compactada do livro</li>
     </ul>
 
-    <p>OBS: Clique sempre em exibir o código fonte para ver como tudo está sendo criado.</p>
+    <small>OBS: Clique sempre em exibir o código fonte para ver como tudo está sendo criado.</small>
 
 </body>
 </html>
