--- a/IHS/Desenvolvimento Web - DW/AULAS/semana10/entrega/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana10/entrega/index.html
@@ -20,14 +20,14 @@
     <h2>Projetos Anteriores</h2>
     <p>Confra alguns trabalhos que desenvolvi nesta disciplina:</p>
     <ul>
-        <li><a href="" target="_blank" rel="next">Artigo Formatado sobre Semântica</a></li>
-        <li><a href="" target="_blank" rel="next">Guia de Jogo com Lista</a></li>
+        <li><a href="../../semana08/ex010/index.html" target="_blank" rel="next">Artigo Formatado sobre Semântica</a></li>
+        <li><a href="../../semana08/entrega/index.html" target="_blank" rel="next">Guia de Jogo com Lista</a></li>
     </ul>
     <h2>Download Úteis</h2>
     <p>Alguns downloads úteis aqui:</p>
     <ul>
-        <li><a href="" download="" >Baixar me Cirrículo (PDF)</a></li>
-        <li><a href="" download="" type="application/zip">Baixar Projeto Completo (.zip)</a></li>
+        <li><a href="archive/arquivo.pdf" download="curriculo" rel="next">Baixar me Cirrículo (PDF)</a></li>
+        <li><a href="archive/arquivo.rar" download="arquivo.rar" type="application/zip">Baixar Projeto Completo (.rar)</a></li>
     </ul>
     <hr>
     <footer>&copy; 2025 - Desenvolvido por Edmilson Araújo Castro Filho</footer>
