--- a/IHS/Desenvolvimento Web - DW/AULAS/semana10/entrega/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana10/entrega/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
+    <link rel="shortcut icon" href="../../../favicon/iconED/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Edmilson Araújo Castro Filho</h1>
