--- a/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form03.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form03.html
@@ -21,7 +21,26 @@
             <input type="text" name="media" id="idmedia" required maxlength="5" size="5">
         </div>
 
-        
+        <div>
+            <label for="idperiodoletivo">Período Letivo</label>
+            <input type="month" required>
+        </div>
+
+        <div>
+            <label for="iddiaprova">Dia da Prova</label>
+            <input type="date" name="dia da proda" id="iddiaprova" required>
+        </div>
+
+        <div>
+            <label for="idhoraprova">Horpario da Prova</label>
+            <input type="time" name="hora da prova" id="idhoraprova" required>
+        </div>
+
+        <!--Seção de botões-->
+        <div>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </div>
     </form>
     <a href="../ex12.html" target="_self" rel="prev"><button>Voltar</button></a>
 </body>
