--- a/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form03.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form03.html
@@ -18,7 +18,7 @@
 
         <div>
             <label for="idmedia">Média</label>
-            <input type="text" name="media" id="idmedia" required maxlength="5" size="5">
+            <input type="number" name="media" id="idmedia" required maxlength="5" max="5" size="5">
         </div>
 
         <div>
@@ -28,7 +28,7 @@
 
         <div>
             <label for="iddiaprova">Dia da Prova</label>
-            <input type="date" name="dia da proda" id="iddiaprova" required>
+            <input type="date" name="dia da proda" id="iddiaprova" required value="2004-09-15">
         </div>
 
         <div>
