--- a/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form03.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form03.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Formulário com Datas e Números</h1>
 
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="POST">
         <!--Área do formulário-->
         <div>
             <label for="idnome">Nome</label>
