--- a/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form04.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form04.html
@@ -7,28 +7,27 @@
     <link rel="shortcut icon" href="../../../../favicon/iconED/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <form action="cadastro.php" method="get" style="margin: auto;">
-        <p>Dados Pessoais</p>
-        <div>
-            <label for="idnome">Nome</label>
-            <input type="text" name="nome" id="idnome">
-        </div>
-
-        <div>
-            <label for="idemail">E-mail </label>
-            <input type="email" name="email" id="idemail"  autocomplete="email">
-        </div>
-
-        <div>
-            <label for="idtelefone">Telefone</label>
-            <input type="tel" name="telefone" id="idtelefone" placeholder="(xx) xxxx-xxxx">
-        </div>
-
-        <div>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Limpar">
-        </div>
-        
+    <form action="cadastro.php" method="POST" style="margin: auto;">
+        <fieldset>
+            <legend>Dados Pessoais</legend>
+            <div>
+                <label for="idnome">Nome</label>
+                <input type="text" name="nome" id="idnome" required placeholder="Fulano Ciclano de Beutrano" maxlength="30">
+            </div>
+            <div>
+                <label for="idemail">E-mail </label>
+                <input type="email" name="email" id="idemail"  autocomplete="email" required placeholder="fulano.ciclano.beutrano@gmail.com" maxlength="20">
+            </div>
+            <div>
+                <label for="idtelefone">Telefone</label>
+                <input type="tel" name="telefone" id="idtelefone" placeholder="(xx) xxxxx-xxxx" maxlength="11" autocomplete="tel" >
+            </div>
+            <br>
+            <div>
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
+            </div>
+        </fieldset>
     </form>
     <a href="../ex12.html" target="_self" rel="prev"><button>Voltar</button></a>
 </body>
