--- a/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form05.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form05.html
@@ -7,6 +7,39 @@
     <link rel="shortcut icon" href="../../../../favicon/iconED/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <h1>Exemplo de formulário Sel</h1>
+    <form action="cadastro.php" method="get">
+        <fieldset>
+            <legend>Sexo</legend>
+            <div>
+                <input type="radio" name="sexo" id="idmascolino">
+                <label for="idmascolino">Mascolino</label><br>
+                <input type="radio" name="sexo" id="idfeminino">
+                <label for="idfeminino">Feminino</label><br>
+                <input type="radio" name="sexo" id="idotariokk">
+                <label for="idotariokk">Nunca</label>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Esporte Favorito</legend>
+            <div>
+                <input type="checkbox" name="futebol" id="idfutebol">
+                <label for="idesporte"> Futebol</label><br>
+                <input type="checkbox" name="basqute" id="idbasquete">
+                <label for="idesporte"> Basquete</label><br>
+                <input type="checkbox" name="natacao" id="idnatacao">
+                <label for="idesporte"> Natação</label><br>
+                <input type="checkbox" name="tenis" id="idtenis">
+                <label for="idesporte"> Tênis</label><br>
+                <input type="checkbox" name="games" id="idgames" checked>
+                <label for="idgames"> Vagabundar</label><br>
+            </div>
+        </fieldset>
+        <br>
+        <div>
+            <button type="submit">Enviar</button>
+        </div>
+    </form>
     <a href="../ex12.html" target="_self" rel="prev"><button>Voltar</button></a>
 </body>
 </html>
