--- a/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form06.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana11/ex012/forms/form06.html
@@ -7,6 +7,32 @@
     <link rel="shortcut icon" href="../../../../favicon/iconED/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <h1>Exemplo de Formulário: Preferências</h1>
+    <fieldset>
+        <legend>Preferências</legend>
+        <form action="cadastro.php" method="POST">
+            <div>
+                <label for="idcor">Cor:</label>
+                <input type="color" name="cor" id="idcor">
+            </div>
+            <br>
+            <div>
+                <label for="idsatisfacao">Nível de Satisfação</label>
+                <input type="range" name="satisfacao" id="idsatisfacao">
+            </div>
+            <br>
+            <div>
+                <label for="idfoto">Foto de perfil: </label>
+                <input type="file" name="foto" id="idfoto">
+            </div>
+            <br>
+            <div>
+                <button type="submit">Enviar</button>
+                <button type="reset">Limpar</button>
+            </div>
+        </form>
+    </fieldset>
+    <br>
     <a href="../ex12.html" target="_self" rel="prev"><button>Voltar</button></a>
 </body>
 </html>
