--- a/IHS/Desenvolvimento Web - DW/AULAS/semana08/entrega/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana08/entrega/index.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manual do Game</title>
+    <link rel="shortcut icon" href="../../../favicon/iconED/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1 style="text-align: center;">Meu Jogo Incrivel - Guia Rápido</h1>
-    <h2 style="text-align: center;">Spirit Tournment</h2>
-    <img src="https://cdn.retrojunk.com/article-images/I4GhUsgaIz2uzOpASpUAu.jpg" alt="Imagem MERAMENTE ilustrativa do Spirit Tournment" style="display: block; margin: auto;" width="400px">
-    <p>Bem-vindo ao guia rápido para diminar os segredos do Spirit Fighters" Prepare-se para fortes emoções em lutas dinâmicas! &copy; 2025.</p>
-    <h3>Comandos Essenciais para Movimentação</h3>
-    <hr>
-    <ul>
-        <li>Mover para cima: Tecla <button>w</button> / Console: <button>&uparrow;</button></li>
-        <li>Mover para Baixo: Tecla <button>S</button> / Console: <button>&downarrow;</button></li>
-        <li>Mover para Esquerda: Tecla <button>A</button> / Console: <button>&leftarrow;</button></li>
-        <li>Mover para Direita: Tecla <button>D</button> / Console: <button>&rightarrow;</button></li>
-        <li>Soco fraco: Tecla <button>U</button> / Console: <button>X</button></li>
-        <li>Soco médio: Tecla <button>I</button> / Console: <button>Y</button></li>
-        <li>Soco Forte: Tecla <button>K</button> / Console: <button>B</button></li>
-        <li>Soul Blast: Tecla <button>J</button> / Console: <button>A</button></li>
-        <li>Atalho 1 (SF/SM): Tecla <button>O</button> / Console: <button>RB</button></li>
-        <li>Atalho 2 (SF/SB): Tecla <button>L</button> / Console: <button>RT</button></li>
-    </ul>
-    <h3>Sequência de Ataques e Quick Combos</h3>
-    <hr>
-    <ol>
-        <li type="I">Aperte rapidamente (Não gasta RageBar): <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button></li>
-        <li type="I">Aperte rapidamente (Gasta 1 RageBar): <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button></li>
-        <li type="I">Aperte rapidamente (Gasta 3 RageBar's): <button>B</button>, <button>B</button>, <button>B</button>, <button>B</button></li>
-    </ol>
-    <h3>Tipos de Supers (Funcina com todos os Char's)</h3>
-    <hr>
-    <dl>
-        <dt>Especial nvl 1 &#x1F47F;</dt>
-        <dd>Rage (Gasta 1 RageBar): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>X</button></dd>
-        <dt>Especial nvl 2 &#x1F480;</dt>
-        <dd>Super Rage (Gasta 2 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>Y</button></dd>
-        <dt>Especial nvl 3 &#x2620;</dt>
-        <dd>Berserk Rage (Gasta 3 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>B</button></dd>
-    </dl>
+    <header>
+        <article>
+            <h1 style="text-align: center;">Meu Jogo Incrivel - Guia Rápido</h1>
+            <h2 style="text-align: center;">Spirit Tournment</h2>
+                </header>
+                <main>
+            <img src="https://cdn.retrojunk.com/article-images/I4GhUsgaIz2uzOpASpUAu.jpg" alt="Imagem MERAMENTE ilustrativa do Spirit Tournment" style="display: block; margin: auto;" width="400px">
+            <p>Bem-vindo ao guia rápido para diminar os segredos do Spirit Fighters" Prepare-se para fortes emoções em lutas dinâmicas! &copy; 2025.</p>
+            <h3>Comandos Essenciais para Movimentação</h3>
+            <hr>
+            <ul>
+                <li>Mover para cima: Tecla <button>w</button> / Console: <button>&uparrow;</button></li>
+                <li>Mover para Baixo: Tecla <button>S</button> / Console: <button>&downarrow;</button></li>
+                <li>Mover para Esquerda: Tecla <button>A</button> / Console: <button>&leftarrow;</button></li>
+                <li>Mover para Direita: Tecla <button>D</button> / Console: <button>&rightarrow;</button></li>
+                <li>Soco fraco: Tecla <button>U</button> / Console: <button>X</button></li>
+                <li>Soco médio: Tecla <button>I</button> / Console: <button>Y</button></li>
+                <li>Soco Forte: Tecla <button>K</button> / Console: <button>B</button></li>
+                <li>Soul Blast: Tecla <button>J</button> / Console: <button>A</button></li>
+                <li>Atalho 1 (SF/SM): Tecla <button>O</button> / Console: <button>RB</button></li>
+                <li>Atalho 2 (SF/SB): Tecla <button>L</button> / Console: <button>RT</button></li>
+            </ul>
+            <h3>Sequência de Ataques e Quick Combos</h3>
+            <hr>
+            <ol>
+                <li type="I">Aperte rapidamente (Não gasta RageBar): <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button>, <button>X</button></li>
+                <li type="I">Aperte rapidamente (Gasta 1 RageBar): <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button>, <button>Y</button></li>
+                <li type="I">Aperte rapidamente (Gasta 3 RageBar's): <button>B</button>, <button>B</button>, <button>B</button>, <button>B</button></li>
+            </ol>
+            <h3>Tipos de Supers (Funcina com todos os Char's)</h3>
+            <hr>
+            <aside>
+                <dl>
+                    <dt>Especial nvl 1 &#x1F47F;</dt>
+                    <dd>Rage (Gasta 1 RageBar): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>X</button></dd>
+                    <dt>Especial nvl 2 &#x1F480;</dt>
+                    <dd>Super Rage (Gasta 2 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>Y</button></dd>
+                    <dt>Especial nvl 3 &#x2620;</dt>
+                    <dd>Berserk Rage (Gasta 3 RageBar's): <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>&downarrow;</button>, <button>&#8600;</button>, <button>&rightarrow;</button>, <button>B</button></dd>
+                </dl>
+            </aside>
+        </article>
+    </main>
 </body>
 </html>
