--- a/IHS/Desenvolvimento Web - DW/AULAS/semana10/entrega/index.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana10/entrega/index.html
@@ -7,29 +7,43 @@
     <link rel="shortcut icon" href="../../../favicon/iconED/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Edmilson Araújo Castro Filho</h1>
-    <i>O alto entitulado Nerdola | Apaixonado em criar e entender.</i>
-    <p>Bem-vindo a minha página de links! Aqui você pode encontrar algumas informações sobre mim e um pequeno indexador sobre sites no qual eu uso.</p>
-    <p>Crônicamente online, busco aprender e entender as principais tecnologias para seguir com a grande corrido do conhecimento, busco acumular experiência na área de TI e ciência das principais noticias!</p>
-    <hr>
-    <h2>Minhas Redes Sociais</h2>
-    <p>Você vai me encontrar facilmente nessas plataformas:</p>
-    <ul>
-        <li><a href="https://x.com/" target="_self" rel="external">X/Twitter</a></li>
-        <li><a href="https://reddit.com/" target="_self" rel="external">Reddit</a></li>
-    </ul>
-    <h2>Projetos Anteriores</h2>
-    <p>Confra alguns trabalhos que desenvolvi nesta disciplina:</p>
-    <ul>
-        <li><a href="../../semana08/ex010/index.html" target="_blank" rel="next">Artigo Formatado sobre Semântica</a></li>
-        <li><a href="../../semana08/entrega/index.html" target="_blank" rel="next">Guia de Jogo com Lista</a></li>
-    </ul>
-    <h2>Download Úteis</h2>
-    <p>Alguns downloads úteis aqui:</p>
-    <ul>
-        <li><a href="archive/arquivo.pdf" download="curriculo" rel="next">Baixar me Cirrículo (PDF)</a></li>
-        <li><a href="archive/arquivo.rar" download="arquivo.rar" type="application/zip">Baixar Projeto Completo (.rar)</a></li>
-    </ul>
+    <header>
+        <h1>Edmilson Araújo Castro Filho</h1>
+    </header>
+    <main>
+        <section>
+            <article>
+                <i>O alto entitulado Nerdola | Apaixonado em criar e entender.</i>
+                <p>Bem-vindo a minha página de links! Aqui você pode encontrar algumas informações sobre mim e um pequeno indexador sobre sites no qual eu uso.</p>
+                <p>Crônicamente online, busco aprender e entender as principais tecnologias para seguir com a grande corrido do conhecimento, busco acumular experiência na área de TI e ciência das principais noticias!</p>
+            </article>
+            <hr>
+            <article>
+                <h2>Minhas Redes Sociais</h2>
+                <p>Você vai me encontrar facilmente nessas plataformas:</p>
+                <ul>
+                    <li><a href="https://x.com/" target="_self" rel="external">X/Twitter</a></li>
+                    <li><a href="https://reddit.com/" target="_self" rel="external">Reddit</a></li>
+                </ul>
+            </article>
+            <article>
+                <h2>Projetos Anteriores</h2>
+                <p>Confra alguns trabalhos que desenvolvi nesta disciplina:</p>
+                <ul>
+                    <li><a href="../../semana08/ex010/index.html" target="_blank" rel="next">Artigo Formatado sobre Semântica</a></li>
+                    <li><a href="../../semana08/entrega/index.html" target="_blank" rel="next">Guia de Jogo com Lista</a></li>
+                </ul>
+            </article>
+            <article>
+                <h2>Download Úteis</h2>
+                <p>Alguns downloads úteis aqui:</p>
+                <ul>
+                    <li><a href="archive/arquivo.pdf" download="curriculo" rel="next">Baixar me Cirrículo (PDF)</a></li>
+                    <li><a href="archive/arquivo.rar" download="arquivo.rar" type="application/zip">Baixar Projeto Completo (.rar)</a></li>
+                </ul>
+            </article>
+        </section>
+    </main>
     <hr>
     <footer>&copy; 2025 - Desenvolvido por Edmilson Araújo Castro Filho</footer>
 </body>
