--- a/IHS/Desenvolvimento Web - DW/AULAS/semana14/ent007/padaria.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana14/ent007/padaria.html
@@ -12,7 +12,18 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Momo+Signature&display=swap');
 
-            
+            body {
+                font-family: cursive;
+            }
+
+            h1 {
+                font-family: "Roboto Condensed", sans-serif;
+            }
+
+            h3 {
+                font-family: "Roboto Condensed", sans-serif;
+            }
+
         </style>
     </header>
 
