--- a/IHS/Desenvolvimento Web - DW/AULAS/semana14/ent007/promocao.html
+++ b/IHS/Desenvolvimento Web - DW/AULAS/semana14/ent007/promocao.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promoção Padaria</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+        @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+        body {
+            font-family: "Roboto Condensed", sans-serif;
+        }
+
+        header h1 {
+            font-family: "Archivo Black", sans-serif;
+        }
+    </style>
 </head>
 <body>
     
